# ic_hack_26

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  brainstorming.md  lettuce_server.py  nli_mock_server.py  nli_openrouter_server.py  pyproject.toml  run_research_live.py  start_servers.sh  stop_servers.sh  test_end_to_end.py
config/: __init__.py  factory.py  loader.py  models.yaml
convex/: events.ts  graph.ts  schema.ts  sessions.ts
convex/_generated/: api.d.ts
docs/: IMPLEMENTATION_SUMMARY.md
models/: __init__.py  base.py
models/backends/: __init__.py  mock.py  openrouter.py
models/validators/: __init__.py  lettuce_direct.py  lettuce_mock.py  lettucedetect.py  nli_direct.py  nli_http.py  nli_mock.py  types.py
scripts/: start_servers.sh
src/: __init__.py  settings.py  summarize.py
src/config/: factory.py  loader.py  models.yaml
src/halugate/: __init__.py
src/llm/: __init__.py  adapters.py
src/orchestration/: master_agent.py
src/semantic_scholar/: client.py
src/storage/: convex_client.py
tests/: verify_config.py
viewer/: .gitignore  package.json  tsconfig.app.json
viewer/src/: App.tsx
viewer/src/components/: DetailPanel.tsx  EventFeed.tsx  ResearchGraph.tsx  StatsPanel.tsx
